--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,21 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@reduxjs/toolkit": "^2.6.1",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
