--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.26.3",
     "@reduxjs/toolkit": "^2.6.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "babel-loader": "^10.0.0",
     "html-webpack-plugin": "^5.6.3",
     "leaflet": "^1.9.4",
